--- a/style.css
+++ b/style.css
@@ -2,7 +2,44 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color: #fdf3f3;
 }
+
 body {
     font-family: "Roboto", sans-serif;
 }
+
+h2 {
+    font-size: 3rem;
+    font-weight: bold;
+    padding: 2rem;
+}
+
+h3 {
+    font-size: 1rem;
+    font-weight: normal;
+}
+
+.cake {
+    padding-top: 2rem;
+    height: 55vh;
+}
+
+.coming-soon {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.countdown {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+}
+
+.day, .hour, .minute, .second {
+    font-size: 2rem;
+}
+
